--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ buildscript {
         maven { url "https://kotlin.bintray.com/kotlin-eap" }
         maven { url "https://jetbrains.bintray.com/kotlin-native-dependencies" }
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url kotlinCompilerRepo }
     }
 
     dependencies {
@@ -160,6 +161,7 @@ allprojects {
         }
         maven { url "https://kotlin.bintray.com/kotlin-eap" }
         maven { url "https://kotlin.bintray.com/kotlinx" }
+        maven { url kotlinCompilerRepo }
     }
 }
 
