--- a/gradle.properties
+++ b/gradle.properties
@@ -41,8 +41,8 @@ source_map_support_version=0.5.3
 # Settings
 kotlin.incremental.multiplatform=true
 kotlin.native.ignoreDisabledTargets=true
-kotlinCompilerRepo=https://teamcity.jetbrains.com/guestAuth/app/rest/builds/buildType:(id:Kotlin_dev_Compiler),number:1.3.60-dev-1867,branch:default:any,pinned:true/artifacts/content/maven
-# Site deneration
+kotlinCompilerRepo=https://teamcity.jetbrains.com/guestAuth/app/rest/builds/buildType:(id:Kotlin_dev_Compiler),number:1.3.60-dev-2011,branch:default:any,pinned:true/artifacts/content/maven
+nativeReport=nativeReport.txt
 jekyll_version=4.0
 
 # JS IR baceknd sometimes crashes with out-of-memory
