--- a/gradle.properties
+++ b/gradle.properties
@@ -42,8 +42,9 @@ source_map_support_version=0.5.3
 kotlin.incremental.multiplatform=true
 kotlin.native.ignoreDisabledTargets=true
 kotlinCompilerRepo=https://teamcity.jetbrains.com/guestAuth/app/rest/builds/buildType:(id:Kotlin_dev_Compiler),number:1.3.60-dev-2066,branch:default:any,pinned:true/artifacts/content/maven
-nativeReport=nativeReport.txtjekyll_version=4.0
-
+nativeReport=nativeReport.txt
+jekyll_version=4.0
+org.gradle.jvmargs=-Xmx2048m
 # JS IR baceknd sometimes crashes with out-of-memory
 # TODO: Remove once KT-37187 is fixed
 org.gradle.jvmargs=-Xmx2g
