--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ kotlin_version=1.4-M2-eap-69
 
 # Dependencies
 junit_version=4.12
-atomicfu_version=0.14.2
+atomicfu_version=0.14.3-mpp-dev-5
 knit_version=0.1.3
 html_version=0.6.8
 lincheck_version=2.7.1
